--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,16 @@ button:hover {
     background-color: rgba(0,0,0,0.6);
     z-index: 1;
 }
+.darker-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 1;
+    border-radius: 15px;
+}
 
 .view-more-button{
     
@@ -641,3 +651,95 @@ section .container2 .contactForm .formBox .inputBox input[type="submit"]:hover {
     text-align: center;
     padding-top: 75px;
 }
+body { font-family: sans-serif; }
+    .cards-container {
+        
+        width: 90%;
+        padding: 20px;
+        margin: 35px auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 30px;
+        background-color: transparent;
+    }
+
+    .introText {
+        font-size: xx-large;
+        width: 100%;
+        height: 725px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+	.scene {
+  		width: 300px;
+  		height: 360px;
+  		perspective: 600px;
+        border-radius: 15px;
+        
+	}
+	
+	.card {
+  		width: 100%;
+  		height: 100%;
+  		position: relative;
+  		transition: transform 1s;
+  		transform-style: preserve-3d;
+        border-radius: 15px;
+        width: 90%;
+        padding: 20px;
+        margin: 35px auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 30px;
+        background-color: transparent;
+        
+	}
+	
+	.card__face {
+  		position: absolute;
+  		height: 100%;
+  		width: 100%;
+  		backface-visibility: hidden;
+        border-radius: 15px;
+	}
+	
+	.card__face--front {
+  		background: red;
+        background-image: url('/pictures/restaurant1.jpeg');
+        background-size: contain;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+	}
+
+	.card__face--back {
+  		background: white;
+        background-image: url('/pictures/restaurant1.jpeg');
+        background-size: contain;
+        color: white;
+        border-radius: 15px;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+  		transform: rotateY( 180deg );
+	}
+
+    .card__face card__face--back{
+        color: white;
+        border-radius: 15px;
+    }
+	
+	.card.is-flipped {
+  		transform: rotateY(180deg);
+	}
+
+    .backcontent {
+        z-index: 2; /* Ensures the text content is above the overlay */
+        position: relative; /* This can help in more complex layouts */
+    }
