--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -743,3 +744,34 @@ body { font-family: sans-serif; }
         z-index: 2; /* Ensures the text content is above the overlay */
         position: relative; /* This can help in more complex layouts */
     }
+    @font-face {
+        font-family: 'comeback';
+        src: url('/fonts/tough2.otf');
+    }
+    .intro {
+        width: 100%;
+        height: 650px;
+        font-family: 'comeback';
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        
+    }
+
+    .intro h1 {
+        font-size: 80px;
+        font-family: 'comeback';
+        text-align: center;
+        text-shadow: 0 15px 25px rgba(0,136,169,0.9);
+    }
+
+    .intro p{
+        text-align: center;
+        text-wrap: true;
+        font-size: 24px;
+        width : 75%;
+    }
+
+   
+      
