--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ li, a, button {
     text-decoration: none;
 }
 
+
 header {
     display: flex;
     justify-content: space-between;
@@ -60,12 +61,15 @@ header {
 
 button {
     padding: 9px 25px;
+    
     background-color: rgba(0,136,169,1);
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
-
+    text-align: center;
+    line-height: normal;
+    width: auto;
 }
 
 button:hover {
@@ -78,9 +82,9 @@ button:hover {
     position: relative;
     width: 100%;
     min-height: 56.25vw;
-    background-image: url('kitchen.jpeg');
+    background-image: url('/pictures/tools.jpeg');
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     display: flex;
     justify-content: center;
@@ -96,6 +100,16 @@ button:hover {
     height: 100%;
     background-color: rgba(0,0,0,0.6);
     z-index: 1;
+}
+.darker-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 1;
+    border-radius: 15px;
 }
 
 .view-more-button{
@@ -473,7 +487,7 @@ section .container2 .contactForm .formBox, .inputBox input {
     outline: none;
 }
 
-section .container2 .contactForm .formBox .inputBox input[type="submit"] {
+section .container2 .contactForm .formBox .inputBox button {
     position: relative;
     height: 36px;
     cursor: pointer; /* Changes the cursor to a pointer to indicate it's clickable */
@@ -481,14 +495,17 @@ section .container2 .contactForm .formBox .inputBox input[type="submit"] {
     color: white; /* Sets the text color inside the button */
     border: none; /* Removes any default border */
     max-width: 150px; /* Sets a maximum width for the button */
-    width: 100%; /* Ensures the button expands to the full width of its container */
+    height: 100%;
+    width: 125%; /* Ensures the button expands to the full width of its container */
     padding: 12px; /* Adds some padding inside the button for better visual appearance */
     font-size: 16px; /* Adjusts the font size inside the button */
     border-radius: 5px; /* Optional: Rounds the corners of the button */
+    line-height: normal;
     text-align: center; /* Ensures the text is centered within the button */
     display: block; /* Makes the button a block element to utilize width properly */
     margin: 0 auto; /* Centers the button horizontally in its container */
     transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effects */
+    
 }
 
 section .container2 .contactForm .formBox .inputBox input[type="submit"]:hover {
@@ -640,4 +657,386 @@ section .container2 .contactForm .formBox .inputBox input[type="submit"]:hover {
     width: 100%;
     text-align: center;
     padding-top: 75px;
+}
+body { font-family: sans-serif; }
+    .cards-container {
+        
+        width: 90%;
+        padding: 20px;
+        margin: 35px auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 30px;
+        background-color: transparent;
+    }
+
+    .introText {
+        font-size: xx-large;
+        width: 100%;
+        height: 725px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+	.scene {
+  		width: 300px;
+  		height: 360px;
+  		perspective: 600px;
+        border-radius: 15px;
+        
+	}
+	
+	.card {
+  		width: 100%;
+  		height: 100%;
+  		position: relative;
+  		transition: transform 1s;
+  		transform-style: preserve-3d;
+        border-radius: 15px;
+        width: 90%;
+        padding: 20px;
+        margin: 35px auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 30px;
+        background-color: transparent;
+        
+	}
+	
+	.card__face {
+  		position: absolute;
+  		height: 100%;
+  		width: 100%;
+  		backface-visibility: hidden;
+        border-radius: 15px;
+	}
+	
+	.card__face--front {
+  		background: red;
+        background-image: url('/pictures/bathroom.jpg');
+        background-size: contain;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+
+	}
+
+	.card__face--back {
+  		background: white;
+        background-image: url('/pictures/restaurant1.jpeg');
+        background-size: contain;
+        color: white;
+        border-radius: 15px;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+  		transform: rotateY( 180deg );
+	}
+
+    .card__face card__face--back{
+        color: white;
+        border-radius: 15px;
+    }
+	
+	.card.is-flipped {
+  		transform: rotateY(180deg);
+	}
+
+    .backcontent {
+        z-index: 2; /* Ensures the text content is above the overlay */
+        position: relative; /* This can help in more complex layouts */
+    }
+    @font-face {
+        font-family: 'comeback';
+        src: url('/fonts/tough2.otf');
+    }
+    .intro {
+        width: 100%;
+        height: 650px;
+        font-family: 'comeback';
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        
+    }
+
+    .intro h1 {
+        font-size: 80px;
+        font-family: 'comeback';
+        text-align: center;
+        text-shadow: 0 15px 25px rgba(0,136,169,0.9);
+    }
+
+    .intro p{
+        text-align: center;
+        text-wrap: true;
+        font-size: 24px;
+        width : 75%;
+    }
+
+.image-container{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
+    float: right;
+    position: relative;
+    background-color:black;
+    height: 800px;
+    padding: 40px;
+    
+    
+}
+
+.image-container-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    font-family: "Playfair Display", serif;
+    font-weight: 500;
+    font-size: 25px;
+    color: white;
+    text-decoration: none;
+    background-color: black;
+
+}
+
+.image-grid {
+    display: grid;
+    float: right;
+    grid-template-columns: repeat(2,250px);
+    gap: 10px;
+    margin-left: auto;
+    margin-right: 70px;
+    width: auto;
+    padding: 20px;
+    
+}
+
+.image-grid img {
+    width: 100%;
+    height: auto;
+    border-radius: 10%;
+    
+    
+}
+@font-face {
+    font-family: 'mont';
+    src: url('/fonts/montserrat.ttf');
+}
+.text {
+    text-align: center;
+    width: 50%;
+    padding: 20px;
+    align-self: right;
+    padding-top: 300px;
+    padding-left: 50px;
+    padding-right: 0px;
+    color: white;
+    text-shadow: #ffffff;
+}
+
+.what-we-do-text {
+    font-size: 23px;
+    padding-bottom: 3000px;
+    font-family: 'mont'
+}
+
+
+.image-container-left {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
+    float: right;
+    position: relative;
+    background-color:white;
+    height: 800px;
+    padding: 40px;
+    
+    
+}
+
+
+
+.image-grid-left {
+    display: grid;
+    float: right;
+    grid-template-columns: repeat(2,250px);
+    gap: 10px;
+    margin-left: auto;
+    margin-right: 70px;
+    width: auto;
+    padding: 20px;
+    
+}
+
+.image-grid-left img {
+    width: 100%;
+    height: auto;
+    border-radius: 10%;
+    
+}
+.text-left {
+    text-align: center;
+    width: 50%;
+    padding: 20px;
+    align-self: right;
+    padding-top: 300px;
+    padding-left: 50px;
+    padding-right: 0px;
+    color: black;
+    text-shadow: #ffffff;
+}
+
+
+.what-we-do-text-left {
+    font-size: 23px;
+    padding-bottom: 3000px;
+    font-family: 'mont'
+}
+/* Base styles included in your initial CSS outside of any media query are applied universally */
+
+/* Styles specific to tablet devices */
+@media (max-width: 768px) {
+    body {
+        font-size: 14px;  /* Smaller font size for smaller screens */
+    }
+
+    .nav_links li {
+        padding: 0 10px;  /* Less padding for navigation links */
+    }
+
+    .nav_links li a, li, a, button {
+        font-size: 14px;  /* Smaller font size for navigation links and buttons */
+    }
+
+    .header-1, .what-we-do {
+        font-size: 14px;  /* Smaller font size for headers */
+    }
+
+    .container, .imagecontainer {
+        flex-direction: column;  /* Stack elements vertically instead of horizontally */
+        padding: 10px;  /* Less padding */
+    }
+
+    .box, .image-grid img, .image-grid-left img {
+        width: 100%;  /* Full width for better use of space */
+    }
+
+    .box:hover {
+        transform: scale(1);  /* Disable scaling effect */
+    }
+    
+    .section .container2 .contactForm {
+        margin-left: 0;
+        padding-left: 20px;
+        width: 100%;  /* Full width form */
+    }
+}
+
+/* Styles specific to mobile devices */
+@media (max-width: 480px) {
+    header {
+        flex-direction: column;
+        padding: 20px;  /* More compact header */
+    }
+
+    .logo, .nav_links, .button {
+        width: 100%;  /* Full width */
+        text-align: center;  /* Center alignment */
+        margin-top: 10px;  /* Spacing between items */
+    }
+
+    .nav_links li {
+        padding: 0;  /* No padding */
+    }
+
+    .button {
+        font-size: 12px;  /* Smaller buttons */
+    }
+
+    .intro h1 {
+        font-size: 40px;  /* Smaller main title */
+    }
+
+    .intro p {
+        font-size: 18px;  /* Smaller text */
+    }
+}
+
+.client-wrap *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+}
+.client-wrap body{
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    background-color: #f5f5f5;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+
+.client-wrap {
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+.client-wrap h1{
+    font-size: 30px;
+    color: black;
+
+}
+
+.client-wrap hr {
+    width: 15%;
+    height: 5px;
+    border: none;
+    background: #007B92;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+}
+
+.client-in {
+    width: 100%;
+    height: auto;
+}
+
+.client-in ul {
+    padding: 0;
+    margin: 0;
+}
+
+.client-in ul li {
+    list-style: none;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    width: 15%;
+    min-height: 50px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+.client-in ul li img {
+    max-width: 100%;
+    max-height: 100%;
+    
 }
